tests/ui/traits/negative-bounds/opaque-type-unsatisfied-bound.stderr
error[E0271]: type mismatch resolving `impl !Sized + Sized == ()`
  --> $DIR/opaque-type-unsatisfied-bound.rs:15:16
   |
LL | fn weird0() -> impl Sized + !Sized {}
   |                ^^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `impl !Sized + Sized == ()`
  --> $DIR/opaque-type-unsatisfied-bound.rs:17:16
   |
LL | fn weird1() -> impl !Sized + Sized {}
   |                ^^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `impl !Sized == ()`
  --> $DIR/opaque-type-unsatisfied-bound.rs:19:16
   |
LL | fn weird2() -> impl !Sized {}
   |                ^^^^^^^^^^^ types differ

error[E0277]: the trait bound `impl !Trait: Trait` is not satisfied
  --> $DIR/opaque-type-unsatisfied-bound.rs:12:13
   |
LL |     consume(produce());
   |     ------- ^^^^^^^^^ the trait `Trait` is not implemented for `impl !Trait`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `consume`
  --> $DIR/opaque-type-unsatisfied-bound.rs:9:20
   |
LL | fn consume(_: impl Trait) {}
   |                    ^^^^^ required by this bound in `consume`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
